fix color behinde footer at scale > 60%

--- a/css/style-black.css
+++ b/css/style-black.css
@@ -9,7 +9,7 @@ body {
     font-size: 15px;
     line-height: 1.42857143;
     color: #333;
-    background-color: #fff;
+    background-color: #F5F5F5;
     margin: 0;    
 }
 a {
@@ -575,6 +575,11 @@ nav select {
 }
 /* * * Content * * */
 
+.bodywrap {
+    background-color: white;
+    padding: 0 0 20px 0;
+}
+
 .showcase {
     text-align: center;
 }
@@ -768,7 +773,7 @@ footer {
     border-top: 1px solid #E8E8E8;
     padding: 25px 0 15px 0;
     font-size: 13px;
-    margin: 20px 0 0 0;
+    margin: 0;
 }
 .footerwrap {
     max-width: 1170px;
